Buttons updated, goto option added

--- a/src/sass/3/openeyes/__all.scss
+++ b/src/sass/3/openeyes/__all.scss
@@ -40,7 +40,7 @@
 @import "ui/typography/_all"; 				// defaults and general typographics.
 @import "ui/collapse-group";				// collapse and expand groups
 @import "ui/collapse-data";					// collapse and expand data
-@import "ui/buttons"; 						// button and .button
+@import "ui/buttons/_all"; 					// button and .button
 @import "ui/button-stack";					// button stack
 @import "ui/alert-box";						// alerts
 @import "ui/status-box";					// status
