--- a/src/sass/3/openeyes/ui/buttons/__all.scss
+++ b/src/sass/3/openeyes/ui/buttons/__all.scss
@@ -7,6 +7,6 @@
 @import "pro-theme";
 @import "clinic-add-pathstep";
 @import "header-tab";
-@import "goto";
+@import "link";
 @import "key-hint";
 
