Buttons updated, goto option added

--- a/src/sass/3/openeyes/ui/buttons/_header-tab.scss
+++ b/src/sass/3/openeyes/ui/buttons/_header-tab.scss
@@ -8,7 +8,9 @@
 	&.header-tab {
 		margin:0;
 		background: none; 		// to match the Header background
-		&:hover, &:focus, &:active {
+		&:hover,
+		&:focus,
+		&:active {
 			color: rgb(255,255,255);
 			background: $oe-btn-blue;
 		}
