--- a/src/sass/3/openeyes/ui/buttons/__all.scss
+++ b/src/sass/3/openeyes/ui/buttons/__all.scss
@@ -2,11 +2,11 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 @import "_base";
-@import "header-tab";
+@import "header-tab"; // must be before colors!
 @import "colors";
 @import "adder";
-@import "pro-theme";
-@import "clinic-add-pathstep";
-@import "link";
+@import "i-link";
 @import "key-hint";
+@import "clinic-add-pathstep";
+@import "pro-theme";
 
