Load on request UIX added

--- a/src/sass/3/openeyes/components/sem/elements/_tables.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_tables.scss
@@ -143,7 +143,7 @@
 			}
 
 			// divider is for subtle data divides withIN a table
-			// if you want a big divide use <hr class="divide"> and have 2 tables
+			// if you want a big divide use <hr class="divider"> and have 2 tables
 			&.divider {
 				border-top-width: 2px;
 
