--- a/src/sass/3/openeyes/components/sem/elements/specific/_injection-mgmt.scss
+++ b/src/sass/3/openeyes/components/sem/elements/specific/_injection-mgmt.scss
@@ -9,6 +9,11 @@
 			margin: 5px 0 0 0;
 		}
 
+		// indent to match the lat icon spacing
+		.overview-notes {
+			margin: 3px 0 0 23px;
+		}
+
 		.prev-interval {
 			position: relative;
 			@include font-size(11);
@@ -30,32 +35,40 @@
 		}
 	}
 
+	.inj-series {
+		@include flex( center, center );
+		margin:10px 0;
+	}
+
 	// handle the layout for Injection - interval - Injection
 	.inj-mgmt-inj {
-		@include flex(stretch, space-between);
-		margin: 15px 0; // match .row
+		@include flex(center, space-between);
+		margin:10px 0;
+		padding: 5px;
+		border-radius: 5px;
+		background-color: rgba($oe-user-inputs,0.4);
 
 		.details {
-			flex: 1;
+			flex: 1 1 0;
+			padding:0 5px;
 		}
 
-		.buttons {
-			flex: 1;
-		}
-
+		// now only a link to the injection management
 		.actions {
-			flex: 1;
-			@include flex(center, center);
+			padding:0 5px;
+			text-align: right;
+		}
+	}
 
-			> button {
-				margin: 0 2px;
-
-				&:first-child {
-					margin-left: 0;
-				}
-
+	// Previous injections (history)
+	table.inj-mgmt-previous {
+		width: 100%;
+		tbody {
+			td {
+				padding-top: 5px;
+				padding-bottom: 5px;
 				&:last-child {
-					margin-right: 0;
+					text-align: left;
 				}
 			}
 		}
