Injection Management UIX updates

--- a/src/sass/3/openeyes/components/sem/elements/__all.scss
+++ b/src/sass/3/openeyes/components/sem/elements/__all.scss
@@ -38,7 +38,7 @@
 @import "specific/upload-box"; 				// only used in Document Upload
 @import "specific/strabismus/_all"; 		// Strabismus custom elements
 @import "specific/message-states"; 		
-@import "specific/injection-mgmt";  // injection management 
+@import "specific/injection-mgmt/_all";  // injection management
 @import "specific/drug-admin";  // injection management 
 @import "specific/botox/_all";  // injection management
 @import "specific/attachments";
