Removed warning class from oe-patient

--- a/src/sass/3/openeyes/components/patient/meta/__base.scss
+++ b/src/sass/3/openeyes/components/patient/meta/__base.scss
@@ -25,13 +25,15 @@
 	.patient-details {
 		line-height:1;
 	}
-	
+
+	// removed .warning it was causing a conflict
+	// with the highlighter class, if you need it back
+	// change to .patient-warning!!
 	.hospital-number, 
 	.nhs-number, 
 	.patient-gender, 
 	.patient-age, 
-	.patient-died,
-	.warning {
+	.patient-died {
 		
 		display:inline-block;
 		@include font-size(11);
