--- a/src/sass/3/openeyes/components/header/oe-patient/_data.scss
+++ b/src/sass/3/openeyes/components/header/oe-patient/_data.scss
@@ -37,13 +37,16 @@
 		bottom:4px; 
 		right:0;
 	}
-	
+
+
+	// removed .warning it was causing a conflict
+	// with the highlighter class, if you need it back
+	// change to .patient-warning!!
 	.hospital-number, 
 	.nhs-number, 
 	.patient-gender, 
 	.patient-age, 
-	.patient-died,
-	.warning {
+	.patient-died {
 		display:inline-block;
 		padding:0 3px 5px 5px;
 		border-left:1px solid $oe-dark-line;	
