--- a/src/sass/3/openeyes/__all.scss
+++ b/src/sass/3/openeyes/__all.scss
@@ -40,6 +40,7 @@
 @import "ui/typography/_all"; 				// defaults and general typographics.
 @import "ui/collapse-group";				// collapse and expand groups
 @import "ui/collapse-data";					// collapse and expand data
+@import "ui/pro-data-view";					// pro / standard views
 @import "ui/load-on-request";				// load on request
 @import "ui/buttons/_all"; 					// button and .button
 @import "ui/button-stack";					// button stack
