--- a/src/sass/3/openeyes/ui/_pro-data-view.scss
+++ b/src/sass/3/openeyes/ui/_pro-data-view.scss
@@ -19,8 +19,9 @@
 		// make the icon expand to fill the area
 		.oe-i {
 			width: 25px;
-			// height: 100%;
-			background-position-y: 5px;
+			height: 100%;
+			min-height: 19px;
+			background-position-y: 0;
 		}
 	}
 }
