--- a/src/sass/3/openeyes/components/sem/elements/_tiles.scss
+++ b/src/sass/3/openeyes/components/sem/elements/_tiles.scss
@@ -49,9 +49,7 @@
 		position: relative;
 		max-height: 160px;
 		overflow-y: auto;
-
-		// provide gutter for scrollbar and a gap at the end of the scrolling data
-		padding: 0 10px 5px 0;
+		padding: 0 6px 0 0;
 	}
 }
 
