--- a/src/sass/3/openeyes/components/lightning/_timeline-options.scss
+++ b/src/sass/3/openeyes/components/lightning/_timeline-options.scss
@@ -31,7 +31,7 @@
 					display:block; // not using flex, block works better here (because of the columns)
 					margin:0 0 2px 0;
 					height:19px;
-					line-height:19px;
+					@include flex( center, flex-start );
 					@include font-size(12);
 					font-weight:400;
 					//background: ;
