--- a/src/sass/3/openeyes/components/popups/add-new-event/standardised/_step-element.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/standardised/_step-element.scss
@@ -1,23 +1,17 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-
-// OE Add New Event Popup)
-// 
-// this is modified OEv2.0 CSS
-// 
-// Step through element choice <li>
-
 .add-new-event {
 	
 	// base style for sub-specialties, context and new event options 
-	// all the options are <li>
+	// <li>
 	li {
-		display:block; // not using flex, block works better here (because of the columns)
+		@include flex( center, flex-start);
 		margin:0 0 2px 0;
 		padding-left:10px;
 		height:19px;
-		line-height:19px;
+
+		break-inside: avoid;
 		
 		@include font-size(12);
 		font-weight:400;
