--- a/src/sass/3/openeyes/components/popups/add-new-event/standardised/__all.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/standardised/__all.scss
@@ -1,9 +1,9 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-@import "step-element";
-@import "step-through-layout";
+@import "_base";
+@import "step-subspecialties";
 @import "change_subspecialty"; // add / change new sub-specialty
-@import "step1-subspecialty";
+@import "oe-event-type";
 
 
