--- a/src/sass/3/openeyes/components/popups/add-new-event/standardised/__all.scss
+++ b/src/sass/3/openeyes/components/popups/add-new-event/standardised/__all.scss
@@ -2,6 +2,8 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 @import "_base";
+@import "lists";
+@import "tag";
 @import "step-subspecialties";
 @import "change_subspecialty"; // add / change new sub-specialty
 @import "oe-event-type";
