--- a/src/sass/3/openeyes/ui/_alert-box.scss
+++ b/src/sass/3/openeyes/ui/_alert-box.scss
@@ -9,7 +9,7 @@
 
 .alert-box {
 	padding:4px 10px;
-	margin:3px 2px;
+	margin:3px 0;
 
 	// default
 	color:$oe-blue;
@@ -58,8 +58,7 @@
 	
 	// if there are list of issues or warnings:
 	ul {
-		list-style: disc;
-		list-style-position: inside;
+		list-style: disc inside;
 		margin:5px 0;
 		li {
 			margin-bottom: 3px; 
@@ -80,6 +79,21 @@
 			position: absolute;
 			right:8px;
 			top:4px;
+		}
+	}
+
+	// dismissible
+	&.dismissible {
+		cursor: pointer;
+		background-repeat: no-repeat;
+		background-position: top 5px right 5px;
+		background-image: url(svg-dark-fixed("i/remove-circle"));
+		background-size:17px;
+		padding-right:30px; // allow for the background icon
+
+		&:focus,
+		&:hover {
+			background-color:$oe-btn-blue-hint;
 		}
 	}
 	
