--- a/src/sass/3/openeyes/ui/_status-box.scss
+++ b/src/sass/3/openeyes/ui/_status-box.scss
@@ -15,7 +15,7 @@
 	border: 2px solid $oe-line;
 	border-radius: 20px;
 
-	margin: 3px 2px;
+	margin: 3px 0;
 	padding: 4px 10px 4px 25px; // allow for circle
 
 	background: 5px 7px / 11px url(svg-all("i/circle-blue")) no-repeat;
