Improvements to lists

--- a/src/sass/3/openeyes/components/admin/_restrict-filename.scss
+++ b/src/sass/3/openeyes/components/admin/_restrict-filename.scss
@@ -12,7 +12,7 @@
 		// filenames these need restricting and wrapping
 		// ...in DICOM logs there are very long 
 		.restrict-filename {
-			word-wrap:break-word;
+			overflow-wrap: break-word;
 			width:200px;
 		}
 	
