--- a/src/sass/3/openeyes/components/virtual-clinic/virtual-clinic/_table.scss
+++ b/src/sass/3/openeyes/components/virtual-clinic/virtual-clinic/_table.scss
@@ -36,7 +36,7 @@ table.virtual-clinic {
 			@include font-size(11);
 			max-height: 100px;
 			overflow-y: auto;
-			word-wrap: break-word; // break up long words.
+			overflow-wrap: break-word; // break up long words.
 		}
 
 		// clinic info is complicated <td>
