--- a/src/sass/3/openeyes/ui/_oe-date.scss
+++ b/src/sass/3/openeyes/ui/_oe-date.scss
@@ -23,20 +23,20 @@
 	
 	.day {
 		text-align: right;
-		// because of being right aligned this needs to fit '00' as tightly as possible
-		// this is so that single digits "1" lines up with "11" correctly
-		width:2ch; 			// will need increasing to allow for font-size
-		margin:0 1ch 0 0;		// this provides 'padding' between Mth (do NOT use padding tho ;)
+		// right aligned so that single digits "1" lines up with "11" correctly
+		width:2ch;
+		margin:0 1ch 0 0;
 	}
 	.mth{
-		text-align: left;		// if used in table in the last column it will be aligned to the right! 
+		// if used in last <td> table it will be aligned to the right!
+		text-align: left;
 		width:4ch;
 	} 
 	.yr {
 		text-align: right;
 		width:4ch;
 	}
-	
+
 	.situational-awareness & {
 		@include font-size(11);
 		opacity:0.5;
