--- a/src/sass/3/openeyes/ui/lists/__all.scss
+++ b/src/sass/3/openeyes/ui/lists/__all.scss
@@ -7,8 +7,10 @@
 @import "inline-list";
 @import "large-text";
 @import	"dot-list";
+@import	"dot-list-divider";
 @import "btn-list";
 @import "row-list";
 @import "input-list";
+@import "multi-filter-list";
 
 
