--- a/src/sass/3/openeyes/ui/lists/_inline-list.scss
+++ b/src/sass/3/openeyes/ui/lists/_inline-list.scss
@@ -2,14 +2,12 @@
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
 
-ul {
-	
-	&.inline-list {
-		li {
-			display:inline-block;
-			margin:0 15px 0 0;
-		}
+ul.inline-list {
+	li {
+		display: inline-block;
+		margin: 0 15px 0 0;
 	}
-	
 }
+	
+
 
