--- a/src/sass/3/openeyes/ui/lists/_standard.scss
+++ b/src/sass/3/openeyes/ui/lists/_standard.scss
@@ -1,15 +1,13 @@
 // ** Copyright (C) 2020, OpenEyes Foundation. This file is part of OpenEyes.
 // ** OpenEyes is free software; and is distributed, WITHOUT ANY WARRANTY under the terms of AGPL 3.0 licence.
 
-
-ul {
-	// provide a 'standard' list UI
-	&.standard {
-		margin:3px 0;
-		li {
-			padding:0 0 6px 0;	
-		}
+// provide a 'standard' list UI
+ul.standard {
+	margin: 3px 0;
+	li {
+		padding: 0 0 6px 0;
 	}
-	
 }
+	
+
 
